# natural-transformation

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  natural-transformation.cabal
.github/workflows/: haskell-ci.yml
src/Control/: Natural.hs  Object.hs  Transformation.hs
src/Control/Natural/: RULES.hs
src/Control/Transformation/: RULES.hs
tests/: Properties.hs
