name:                natural-transformation
version:             0.1
synopsis:            A natural transformation package.
description:         A natural transformation transforms a container @f a@ into another
                     container @g a@ while preserving the internal structure. Natural
                     transformations act as functor morphisms in category theory.
homepage:            https://github.com/ku-fpg/natural-transformation
bug-reports:         https://github.com/ku-fpg/natural-transformation/issues
license:             BSD3
license-file:        LICENSE
stability:           Experimental
author:              Andy Gill
maintainer:          Andy Gill <andygill@ku.edu>
copyright:           Copyright (c) 2015 The University of Kansas
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/natural-transformation

library
  exposed-modules:     Control.Natural
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  ghc-options:         -Wall

test-suite natural-transformation-properties
  type:                exitcode-stdio-1.0
  main-is:             Properties.hs
  build-depends:       base                   >= 4   && < 5
                     , containers             >= 0.1 && < 0.6
                     , natural-transformation == 0.1
                     , quickcheck-instances   >= 0.1 && < 0.4
                     , tasty                  >= 0.8 && < 0.11
                     , tasty-quickcheck       >= 0.8 && < 0.9
  hs-source-dirs:      tests
  ghc-options:         -Wall
